fix: layout with long overflowed content

--- a/stylus/objects/layouts.styl
+++ b/stylus/objects/layouts.styl
@@ -45,7 +45,7 @@ $fullbleed
 $app-2panes
     box-sizing  border-box
     display     flex
-    width       100%
+    max-width       100%
     height      100%
 
     main
